* Caching instructions in main app template
* Adds back Erubis support (once latest Tilt is released)
* Adds back Erubis admin support
* Fixes slim support (with slim initializer file)
* Fixes NotFound Sinatra Errors
* Require correct rspec/exceptions in cucumber.
* Stylesheet_link_tag and javascript_include_tag should allow array inputs for sources (instead of argument array)

== 0.9.23

* Allow 406 on (.format) urls via a flag
* Adds method_override flag to Padrino by default
* Routing compatibility with the Sinatra 1.2 url method
* Padrino now requires to ~> sinatra 1.2.0

== 0.9.22

* Fix no more password encryption when password is blank
* Fix mongoid dependency
* Fix admin mongomapper template to encrypt password
* Allow disabling of Padrino::Logger via :padrino_logging
* Use Sinatra::Base instead of Sinatra::Application
* Added Japanese Translations [Thanks to udzura]
* Set status to 406 on non-provided ACCEPTS
* Returns first provided mime-type on ACCEPT = */*
* Assume */* if no ACCEPT header is given

== 0.9.21

* Support of regex captures in routes
* Fixed routing issues with :index
* Creation of empty directories for images/javascripts/stylesheets/tmp
* Updated mongomapper adapter to use rails3 branch
* Removed snowtag
* Updated datamapper gen to store correctly passwords
* Added Slim template to Padrino Admin [Thanks to Matthew Winter]
* Added Traditional Chinese support(zh_tw) [Thanks to ayamomiji]
* Include padrino-cache gem as part of standard install
* Added Rake Task for Mongoid
* Ensure project name are valid
* Removed erubis support
* Refactored the output handlers for helpers
* Improves select_tag 'selected' option
* Basic nested object form support
* Updated mongoid adapter to use 2.0.0.beta.20
* Remove legacy bundler setup from config/boot.rb
* Change to routes to fix param assembly order
* Fixed optional parameter routing test
* Fixes error_message_on object name bug [Thanks craigp]
* Removed default index page