@@ -12,7 +12,7 @@
       <div id="user-navigation">
         <ul class="wat-cf">
           <li><%%= link_to pat(:profile), url(:accounts, :edit, :id => current_account.id) %></li>
-          <li><%%= link_to pat(:logout), url(:sessions, :destroy), :method => :delete %></li>
+          <li><%%= button_to pat(:logout), url(:sessions, :destroy), :method => :delete, :class => :button_to %></li>
         </ul>
       </div>
       <div id="main-navigation">
