@@ -11,7 +11,7 @@
         #user-navigation
           %ul.wat-cf
             %li=link_to pat(:profile), url(:accounts, :edit, :id => current_account.id)
-            %li=link_to pat(:logout), url(:sessions, :destroy), :method => :delete
+            %li=button_to pat(:logout), url(:sessions, :destroy), :method => :delete, :class => :button_to
         #main-navigation
           %ul.wat-cf
             -project_modules.each do |project_module|
